k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-hr
  labels:
    name: nexus-hr
    environment: production
